# TrialMine

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_edit_python.sh
.claude/skills/: add-feature.md  train-model.md
configs/: development.yaml  training_data.yaml
configs/training/: embeddings.yaml
data/: trial_embeddings.json
data/evaluation/: labeled_queries.jsonl  method_comparison.csv  per_query_fine_tuned.json  per_query_off_the_shelf.json
docs/: design-decisions.md  file-guide.md
notebooks/: finetune_biolinkbert.ipynb
scripts/: build_eval_dataset.py  build_faiss.py  build_index.py  compare_embeddings.py  compare_methods.py  download_data.py  evaluate.py  finetune_embeddings.py  generate_training_data.py  train_ranker.py
src/TrialMine/: __init__.py  config.py  monitoring.py
src/TrialMine/agents/: orchestrator.py  pipeline.py  query_parser.py  tools.py
src/TrialMine/api/: app.py  routes.py  schemas.py
src/TrialMine/data/: download.py  models.py  parse.py  store.py
src/TrialMine/evaluation/: metrics.py
src/TrialMine/features/: concepts.py  eligibility.py
src/TrialMine/models/: cross_encoder.py  embeddings.py  ranker.py
src/TrialMine/retrieval/: bm25.py  hybrid.py  semantic.py
src/TrialMine/ui/: app.py
