[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TrialMine"
version = "0.1.0"
description = "ML-powered clinical trial search engine for oncology"
requires-python = ">=3.11"
dependencies = [
    # API / serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    # Data stores
    "elasticsearch[async]>=8.13,<9",
    "faiss-cpu>=1.8",
    "sqlalchemy>=2.0",
    # ML / embeddings
    "torch>=2.3",
    "transformers>=4.41",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    # NLP
    "scispacy>=0.5",
    # Experiment tracking / HPO
    "mlflow>=2.13",
    "optuna>=3.6",
    # Agents
    "langgraph>=0.1",
    "langchain-anthropic>=0.1",
    # Frontend
    "streamlit>=1.35",
    # Infra
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
trialmine-serve   = "TrialMine.api.app:main"
trialmine-ui      = "TrialMine.ui.app:main"
trialmine-ingest  = "TrialMine.data.download:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
